# Origami

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  credentials.example.toml  origami.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: demo-theme.xresources  demo.cast
origami/: __init__.py  __main__.py  banner.py  cli.py  control.py
origami/brain/: __init__.py  bandit.py  kb.py  memory.py  ngram.py  overlay.yaml
origami/brain/ingest/: __init__.py  wappalyzer.py
origami/core/: __init__.py  baseline.py  credentials.py  evidence.py  fingerprint.py  httpclient.py  normalize.py  overlays.py  response_classifier.py  resume.py  scanner.py  scheduler.py  scope.py
origami/modules/: __init__.py  authz.py  bypass403.py  cache_poison.py  leaks.py  paramfuzz.py  secrets.py  session.py  vhost.py  waf.py
origami/modules/discovery/: __init__.py  apidocs.py  apiver.py  backups.py  buckets.py  clientapp.py  graphql.py  js_parser.py  methods.py  mutate.py  odata.py  originip.py  robots.py  shortname.py  vcs.py  wayback.py  wellknown.py
origami/output/: __init__.py  artifacts.py  diff.py  graph.py  html_report.py  json_report.py  ui.py
origami/wordlists/: 403-headers.txt  base.txt  big.txt
origami/wordlists/overlays/: aspnet.txt  django.txt  drupal.txt  gitlab.txt  grafana.txt  jenkins.txt  joomla.txt  laravel.txt  nextjs.txt  node.txt  rails.txt  spring.txt  symfony.txt  tomcat.txt  wordpress.txt
tests/: test_core.py
tests/benchmark/: bench_adaptive.py  bench_folds.py
tests/fakeserver/: server.py
