[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origami-scanner"
version = "0.2.0"
description = "Adaptive content discovery engine that folds its strategy around the target's behavior, technology and response patterns."
readme = "origami.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6",
    "rich>=13",
    "mmh3>=4",
]

[project.scripts]
origami = "origami.cli:main"

[tool.setuptools.packages.find]
include = ["origami*"]

[tool.setuptools.package-data]
origami = ["wordlists/*.txt", "brain/*.yaml"]
