[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origami-scanner"
dynamic = ["version"]
description = "Adaptive content discovery engine that folds its strategy around the target's behavior, technology and response patterns."
readme = "origami.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6",
    "rich>=13",
    "mmh3>=4",
]

[project.optional-dependencies]
http2 = ["h2>=4"]                 # enables --http2 (HTTP/2 via ALPN)

[project.scripts]
origami = "origami.cli:main"

[tool.setuptools.dynamic]
version = {attr = "origami.__version__"}   # single source of truth (origami/__init__.py)

[tool.setuptools.packages.find]
include = ["origami*"]

[tool.setuptools.package-data]
origami = ["wordlists/*.txt", "brain/*.yaml"]
