[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origami-scanner"
dynamic = ["version"]
description = "Adaptive content discovery engine that folds its strategy around the target's behavior, technology and response patterns."
readme = "origami.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "TheZakMan", email = "thezakman@ctf-br.org" }]
keywords = [
    "security", "pentest", "bug-bounty", "content-discovery", "recon",
    "web-security", "fuzzing", "directory-bruteforce", "fingerprinting", "waf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6",
    "rich>=13",
    "mmh3>=4",
]

[project.optional-dependencies]
http2 = ["h2>=4"]                 # enables --http2 (HTTP/2 via ALPN)

[project.urls]
Homepage = "https://github.com/thezakman/Origami"
Repository = "https://github.com/thezakman/Origami"
Issues = "https://github.com/thezakman/Origami/issues"
Changelog = "https://github.com/thezakman/Origami/blob/main/CHANGELOG.md"

[project.scripts]
origami = "origami.cli:main"

[tool.setuptools.dynamic]
version = {attr = "origami.__version__"}   # single source of truth (origami/__init__.py)

[tool.setuptools.packages.find]
include = ["origami*"]

[tool.setuptools.package-data]
origami = ["wordlists/*.txt", "wordlists/overlays/*.txt", "brain/*.yaml", "py.typed"]
